--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "playwright-api-script-generator",
   "displayName": "Playwright API Test Generator",
   "description": "A VS Code extension to capture API requests and generate Playwright test scripts.",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "publisher": "Bharath",
   "engines": {
     "vscode": ">=1.90.0"
   },
-  "icon": "api.png",
+  "icon": "api-modified.png",
   "keywords": [
     "playwright",
     "api",
@@ -105,7 +105,8 @@
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "postinstall": "npx puppeteer install"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
